# aoc2021rust

./: .gitignore  Cargo.toml
benches/: day19.rs  day23.rs  day23.txt
src/: day 24 part 1.csv  day 24 part 2.csv  day01.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day19_test_data.rs  day20.rs  day21.rs  day22.rs  day23.rs  day25.rs  inputs.rs  lib.rs  main.rs
