[package]
name = "aoc2021rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = {version = "0.11.7", features = ["blocking"  ]}
rustc-hash = "1.1.0"
nom = "7.1.0"

[dev-dependencies]
criterion = "0.3"
bencher = "0.1.5"

[[bench]]
name = "day19"
harness = false